# ml-movie-reccomendation-system-tmdb

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_EDA.ipynb  01_Preprocessing.ipynb  02_ContentBasedModelling.ipynb
src/: app.py
